libs/extractor/tests/snapshots/snapshots/extractor__import_alias_visit__tests__default_to_named_different_name.snap
---
source: libs/extractor/src/import_alias_visit.rs
expression: "transform_import_aliases(r#\"import styledA from '@emotion/styled'\"#,\n\"test.tsx\", \"@devup-ui/react\", &emotion_alias())"
---
import { styled as styledA } from '@devup-ui/react';
