libs/extractor/tests/snapshots/snapshots/extractor__import_alias_visit__tests__default_to_named_same_name.snap
---
source: libs/extractor/src/import_alias_visit.rs
expression: "transform_import_aliases(r#\"import styled from '@emotion/styled'\"#,\n\"test.tsx\", \"@devup-ui/react\", &emotion_alias())"
---
import { styled } from '@devup-ui/react';
