libs/extractor/tests/snapshots/snapshots/extractor__import_alias_visit__tests__default_to_named_with_aliased_named_import.snap
---
source: libs/extractor/src/import_alias_visit.rs
expression: "transform_import_aliases(r#\"import styled, { css as emotionCss } from '@emotion/styled'\"#,\n\"test.tsx\", \"@devup-ui/react\", &emotion_alias())"
---
import { styled, css as emotionCss } from '@devup-ui/react';
