libs/extractor/tests/snapshots/snapshots/extractor__import_alias_visit__tests__named_import_with_alias.snap
---
source: libs/extractor/src/import_alias_visit.rs
expression: "transform_import_aliases(r#\"import { style as myStyle } from '@vanilla-extract/css'\"#,\n\"test.tsx\", \"@devup-ui/react\", &vanilla_extract_alias())"
---
import { style as myStyle } from '@devup-ui/react';
