libs/extractor/tests/snapshots/snapshots/extractor__import_alias_visit__tests__named_to_named_namespace_import.snap
---
source: libs/extractor/src/import_alias_visit.rs
expression: "transform_import_aliases(r#\"import * as VE from '@vanilla-extract/css'\"#,\n\"test.tsx\", \"@devup-ui/react\", &vanilla_extract_alias())"
---
import * as VE from '@devup-ui/react';
